# rust-db

./: .gitignore  Cargo.toml  README.md  sample.env
.github/workflows/: rust.yml
evaluation/: README.md  benchmark_file.sh  comp_a.txt  comp_b.txt  eek  generate_metadata.py  generate_queries.py  generate_queries_naive.py
evaluation/dnf_benchmarking/1/: details.md  queries.txt
evaluation/dnf_benchmarking/2/: details.md  queries.txt
evaluation/dnf_benchmarking/3/: details copy.md  details.md  queries.txt
evaluation/examples/: data_tiny_1.txt  write_example.json
evaluation/fst_benchmarking/1/: details.md
evaluation/metadata/: metadata_128k.txt  metadata_32.txt  metadata_32k.txt  metadata_64k.txt
evaluation/queries/: queries_128k.txt  queries_32.txt  queries_32k.txt  queries_64k.txt
evaluation/testdata/: select_example.json
evaluation/workloads/: workload_32.txt
scripts/: generate_query.js
src/: main.rs
src/server/: bitmap.rs  execute.rs  mod.rs  record.rs  server.rs  store.rs
src/server/operators/: mod.rs  process.rs  select.rs
testdata/: select_goal.json
