[package]
name = "timeseries-storage"
version = "0.1.0"
authors = ["Franco Solleza <iam@francosolleza.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
buffer = "0.1.8"
bincode = "1.3.1"
fst = "0.4.5"
# roaring = "0.6.5"
croaring = "0.4.6"
serde_json = "1.0.61"
serde = { version = "1.0.119", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.4.0"
