[package]
name = "timeseries-storage"
version = "0.1.0"
authors = ["Franco Solleza <iam@francosolleza.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.2"
buffer = "0.1.8"
bytes = "0.4.8"
chrono = { version = "0.4", features = ["serde"] }
croaring = "0.4.6"
dotenv = "0.15.0"
fst = "0.4.5"
serde_bytes = "0.11.5"
serde_json = "1.0.61"
serde = { version = "1.0.119", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.4.0"
